--- a/404.html
+++ b/404.html
@@ -1,14 +1,10 @@
 ---
 layout: default
-title: "404: Page Not Found"
+title: "404: Page not found"
 permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Sayfa bulunamadı</h1>
-  <p class="lead">Üzgünüm, URL adresi değişmiş olabilir. Tekrar denemek için <a href="{{ site.baseurl }}">Anasayfa'ya Geri Dön</a></p>
+  <h1 class="page-title">404: Page not found</h1>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.</p>
 </div>
-
-<h1>Sayfa Bulunamadı.</h1>
-<p class="lead">Üzgünüm, URL adresi değişmiş olabilir. Tekrar denemek için <a href="{{ site.baseurl }}">Anasayfa'ya Geri Dön</a></p>
-<p>
