--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Sayfa bulunamadı</h1>
+  <h1 class="page-title">Sayfa Bulunamadı</h1>
   <p class="lead">Üzgünüm, URL adresi değişmiş olabilir. Tekrar denemek için <a href="{{ site.baseurl }}">Anasayfa'ya Geri Dön</a></p>
 </div>
 
